# easy-box-packer

./: .gitignore  Cargo.toml  Guardfile  README.md  Rakefile  easy-box-packer.gemspec  easy-box-packer.rb  easy-box-packer_spec.rb  pack_benchmark.rb
.github/workflows/: test.yml
ext/: Rakefile
spec/: easy-box-packer_spec.rb
src/: lib.rs
